# poc

./: .gitignore  Cargo.toml  cabal.project  rustfmt.toml  x.sh
.cargo/: config.toml
poc/: poc.proto
poc/poc-bin/: Cargo.toml
poc/poc-bin/src/: client.rs  server.rs
poc/poc-gen/: Cargo.toml  build.rs
poc/poc-gen/src/: lib.rs
poc/poc-hs/: poc-hs.cabal
poc/poc-hs/src/PB/: Common.hs
poc/poc-hs/src/PB/Common/: ByteString.hs  Containers.hs  Status.hs  Types.hs
poc/poc-lib/: Cargo.toml
workspace-hack/: .gitattributes  Cargo.toml
